--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
-    "@types/react": "latest"
+    "@types/react": "latest",
+    "prisma": "latest",
+    "typescript": "latest",
+    "@prisma/client": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
