--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-three/drei": "^10.0.0",
     "@react-three/fiber": "^9.0.2",
     "@types/react": "latest",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
